--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <div>
+        <h1>Vítacora del capitán</h1>
+        <p>Clase 1: Estamos viendo git</p>
+    </div>
 </body>
 </html>
